--- a/index.html
+++ b/index.html
@@ -1,3 +1,147 @@
+
+image.png
+
+<!DOCTYPE html> <html lang="es"> <head> <meta charset="UTF-8"> <meta name="viewport" content="width=device-width, initial-scale=1.0"> <title>José Mario Arias - Desarrollador Freelance</title> <link rel="icon" type="image/x-icon" href="favicon.ico"> <!-- Google Fonts
+
+pasted
+
+Me gusta como voy pero aun no me carga el logo y si ves algun error me ayudas a mejorarlo
+
+Editar
+Veo tu código y hay varios aspectos que podemos mejorar. El principal problema con el logo es que la imagen letscodelogo.png no se está cargando correctamente. Vamos a solucionarlo:
+
+
+Portfolio Mejorado - José Mario Arias
+Artefacto interactivo 
+
+
+
+Continuar
+
+Editar
+
+Portfolio Mejorado - José Mario Arias
+Artefacto interactivo ∙ Versión 2 
+
+Portfolio Mejorado - José Mario Arias
+Artefacto interactivo ∙ Versión 3 
+
+Portfolio Mejorado - José Mario Arias
+Artefacto interactivo ∙ Versión 4 
+
+Portfolio Mejorado - José Mario Arias
+Artefacto interactivo ∙ Versión 5 
+
+Portfolio Mejorado - José Mario Arias
+Artefacto interactivo ∙ Versión 6 
+
+Portfolio Mejorado - José Mario Arias
+Artefacto interactivo ∙ Versión 7 
+
+Portfolio Mejorado - José Mario Arias
+Artefacto interactivo ∙ Versión 8 
+¡Perfecto! He mejorado considerablemente tu portfolio. Aquí están las principales mejoras implementadas:
+
+🚀 Mejoras Principales:
+1. Problema del Logo Solucionado:
+Implementé un sistema de fallback inteligente
+Si la imagen letscodelogo.png no carga, muestra "JM" con estilo atractivo
+Si la imagen carga correctamente, la reemplaza automáticamente
+2. Animaciones y Efectos Mejorados:
+Loading screen más profesional con texto dinámico
+Efectos de partículas en el hero section
+Animaciones de hover más suaves y atractivas
+Efecto de escritura (typewriter) en el título principal
+Gradientes animados y efectos de brillo
+3. Diseño Visual Mejorado:
+Gradientes modernos en botones y elementos
+Sombras más suaves y profesionales
+Efectos de glassmorphism en las tarjetas
+Colores más vibrantes y consistentes
+4. Interactividad Mejorada:
+Hover effects más sofisticados en todas las tarjetas
+Botones con efectos de onda al hacer hover
+Scroll suave mejorado con offset para la navbar
+Animaciones de entrada para las secciones
+5. Responsive Design Optimizado:
+Mejor adaptación a dispositivos móviles
+Logo responsivo que se ajusta correctamente
+Menú móvil mejorado con animaciones
+6. Performance y UX:
+Carga más rápida de elementos
+Transiciones suaves entre estados
+Feedback visual mejorado en interacciones
+🎨 Características Destacadas:
+Logo con fallback inteligente - Si la imagen no carga, muestra "JM" estilizado
+Efectos de partículas flotantes en el hero
+Gradientes animados en bordes de tarjetas
+Efecto de escritura automática en el título
+Loading screen profesional con múltiples estados
+Hover effects 3D en servicios y portfolio
+El código ahora es mucho más robusto y visualmente atractivo. El logo funcionará correctamente tanto si tienes la imagen como si no, y todos los efectos están optimizados para una experiencia de usuario excepcional.
+
+¿Te gustaría que ajuste algún color, animación específica o añada alguna funcionalidad adicional?
+
+
+
+
+me encanta como hago para hacer el logo mas grande y tambien para en vez de jose mario a la para del logo aparezca LETSCODE
+
+Editar
+¡Perfecto! Vamos a hacer el logo más grande y cambiar el texto a "LETSCODE". Aquí están los ajustes:
+
+
+Portfolio Mejorado - José Mario Arias
+Artefacto interactivo ∙ Versión 9 
+
+Portfolio Mejorado - José Mario Arias
+Artefacto interactivo ∙ Versión 10 
+
+Portfolio Mejorado - José Mario Arias
+Artefacto interactivo ∙ Versión 11 
+
+Portfolio Mejorado - José Mario Arias
+Artefacto interactivo ∙ Versión 12 
+
+Portfolio Mejorado - José Mario Arias
+Artefacto interactivo ∙ Versión 13 
+
+Portfolio Mejorado - José Mario Arias
+Artefacto interactivo ∙ Versión 14 
+¡Perfecto! ✨ He realizado los cambios que solicitaste:
+
+🚀 Cambios Implementados:
+1. Logo Más Grande:
+Tamaño aumentado de 45px a 55px en desktop
+Bordes redondeados más grandes (12px en lugar de 8px)
+Sombra mejorada para darle más presencia
+Gradiente más vibrante en el fallback
+2. Texto Cambiado a "LETSCODE":
+Texto actualizado de "José Mario" a "LETSCODE"
+Fallback mejorado de "JM" a "LC" (LetsCode)
+Tamaño de fuente aumentado a 1.6rem
+Espaciado entre letras mejorado (letter-spacing: 1px)
+Sombra de texto sutil para mejor legibilidad
+3. Mejoras Visuales Adicionales:
+Gradiente más llamativo en el logo
+Sombra con glow para destacar más
+Transiciones suaves en todos los estados
+Responsive optimizado para todos los dispositivos
+4. Características del Nuevo Logo:
+Desktop: 55px x 55px con texto "LETSCODE" a 1.6rem
+Tablet: 45px x 45px con texto a 1.3rem
+Mobile: 35px x 35px con texto a 1rem
+Fallback: "LC" en lugar de imagen si no carga
+El logo ahora tiene mucha más presencia visual y el texto "LETSCODE" le da un toque más profesional y tecnológico a tu marca personal. El sistema de fallback sigue funcionando perfectamente, mostrando "LC" si la imagen no carga.
+
+¿Te gusta cómo se ve ahora? ¿Quieres que ajuste algún otro aspecto del logo o alguna otra parte del sitio?
+
+
+
+
+
+
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -90,35 +234,39 @@
         .logo-container {
             display: flex;
             align-items: center;
-            gap: 0.5rem;
+            gap: 0.8rem;
         }
 
         .logo-img {
-            height: 45px;
-            width: 45px;
-            border-radius: 8px;
+            height: 55px;
+            width: 55px;
+            border-radius: 12px;
             transition: all 0.3s ease;
-            background: var(--accent-color);
+            background: linear-gradient(45deg, var(--accent-color), #ff7b6b);
             display: flex;
             align-items: center;
             justify-content: center;
             color: white;
             font-weight: bold;
-            font-size: 1.2rem;
+            font-size: 1.4rem;
+            box-shadow: 0 4px 15px rgba(247, 108, 94, 0.3);
         }
 
         .logo-img.loaded {
             background: transparent;
+            box-shadow: 0 4px 15px rgba(0,0,0,0.2);
         }
 
         .logo-text {
             font-family: 'Poppins', sans-serif;
             font-weight: 700;
-            font-size: 1.3rem;
+            font-size: 1.6rem;
             background: linear-gradient(45deg, var(--text-light), var(--accent-color));
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
+            letter-spacing: 1px;
+            text-shadow: 0 2px 4px rgba(0,0,0,0.1);
         }
 
         .nav-menu {
@@ -983,12 +1131,13 @@
             }
 
             .logo-img {
-                height: 35px;
-                width: 35px;
+                height: 45px;
+                width: 45px;
+                font-size: 1.1rem;
             }
 
             .logo-text {
-                font-size: 1.1rem;
+                font-size: 1.3rem;
             }
         }
 
@@ -1011,8 +1160,9 @@
             }
 
             .logo-img {
-                height: 30px;
-                width: 30px;
+                height: 35px;
+                width: 35px;
+                font-size: 0.9rem;
             }
 
             .logo-text {
