--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             background: rgba(39, 76, 119, 0.95);
             backdrop-filter: blur(10px);
             z-index: 1000;
-            padding: 1rem 0;
+            padding: 1.2rem 0;
             transition: all 0.3s ease;
         }
 
@@ -78,7 +78,7 @@
             text-decoration: none;
             display: flex;
             align-items: center;
-            gap: 0.8rem;
+            gap: 1rem;
             transition: all 0.3s ease;
         }
 
@@ -88,7 +88,7 @@
 
         /* Estilos específicos para el logo imagen - ACTUALIZADO */
         .logo-img {
-            height: 60px; /* Aumentado de 45px a 60px */
+            height: 80px;
             width: auto;
             border-radius: 8px;
             transition: all 0.3s ease;
@@ -97,7 +97,7 @@
         .logo-text {
             font-family: 'Poppins', sans-serif;
             font-weight: 700;
-            font-size: 1.6rem; /* Aumentado de 1.3rem a 1.6rem */
+            font-size: 1.8rem; 
             margin-left: 0.5rem;
             background: linear-gradient(45deg, #ffffff, #A3B4C4);
             -webkit-background-clip: text;
@@ -1605,3 +1605,4 @@
     </script>
 </body>
 </html>
+
