--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
             transform: scale(1.05);
         }
 
-        /* Estilos específicos para el logo imagen - ACTUALIZADO */
+        /* Estilos específicos para el logo imagen  */
         .logo-img {
-            height: 80px;
+            height: 100px;
             width: auto;
             border-radius: 8px;
             transition: all 0.3s ease;
@@ -1605,4 +1605,5 @@
     </script>
 </body>
 </html>
+
 
