--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LetCode</title>
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <title>LetsCode</title>
+    <link rel="icon" type="image/png" href="FaviconLCTransparente.png">
     
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
@@ -1605,6 +1605,7 @@
     </script>
 </body>
 </html>
+
 
 
 
