--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LetsCode</title>
-    <link rel="icon" type="image/png" sizes="512x512" href="FaviconLCTransparente.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="FaviconLCTransparenteG.png">
     
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
@@ -1605,6 +1605,7 @@
     </script>
 </body>
 </html>
+
 
 
 
