--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LetsCode</title>
+    <title>LETSCODE</title>
     <link rel="icon" type="image/png" sizes="512x512" href="FaviconLCTransparenteG.png">
     
     <!-- Google Fonts -->
@@ -1605,6 +1605,7 @@
     </script>
 </body>
 </html>
+
 
 
 
