--- a/index.html
+++ b/index.html
@@ -1261,13 +1261,13 @@
                 <a href="https://github.com/josemarioarias12" target="_blank">
                     <i class="fab fa-github"></i>
                 </a>
-                <a href="https://linkedin.com/in/josemarioarias" target="_blank">
+                <a href="https:https://www.linkedin.com/in/jose-mario-arias-matamoros-407915133/" target="_blank">
                     <i class="fab fa-linkedin"></i>
                 </a>
-                <a href="https://twitter.com/josemarioarias" target="_blank">
-                    <i class="fab fa-twitter"></i>
+                <a href="https://facebook.com/josemarioariasmatamoros" target="_blank">
+                    <i class="fab fa-facebook"></i>
                 </a>
-                <a href="https://instagram.com/josemarioarias" target="_blank">
+                <a href="https://instagram.com/josemarioarias12" target="_blank">
                     <i class="fab fa-instagram"></i>
                 </a>
             </div>
@@ -1605,6 +1605,7 @@
     </script>
 </body>
 </html>
+
 
 
 
