--- a/index.html
+++ b/index.html
@@ -1261,7 +1261,7 @@
                 <a href="https://github.com/josemarioarias12" target="_blank">
                     <i class="fab fa-github"></i>
                 </a>
-                <a href="https:https://www.linkedin.com/in/jose-mario-arias-matamoros-407915133/" target="_blank">
+                <a href="https://www.linkedin.com/in/jose-mario-arias-matamoros-407915133/" target="_blank">
                     <i class="fab fa-linkedin"></i>
                 </a>
                 <a href="https://facebook.com/josemarioariasmatamoros" target="_blank">
@@ -1605,6 +1605,7 @@
     </script>
 </body>
 </html>
+
 
 
 
