--- a/index.html
+++ b/index.html
@@ -892,8 +892,8 @@
         <div class="container">
             <div class="section-title" data-aos="fade-up">
                 <h2 data-en="About Me" data-es="Acerca de Mí">Acerca de Mí</h2>
-                <p data-en="Passionate developer with years of experience creating digital solutions" data-es="Desarrollador apasionado con años de experiencia creando soluciones digitales">
-                    Desarrollador apasionado con años de experiencia creando soluciones digitales
+                <p data-en="I am a Software Developer with a strong commitment to creating innovative and efficient technological solutions. I specialize in Full Stack Development" data-es="Soy desarrollador de Software con un fuerte compromiso por el desarrollo desoluciones tecnológicas innovadoras y eficientes. Me especializo en desarrollo FullStack,">
+                    Soy desarrollador de Software con un fuerte compromiso por el desarrollo desoluciones tecnológicas innovadoras y eficientes. Me especializo en desarrollo FullStack
                 </p>
             </div>
             <div class="about-content">
@@ -1605,6 +1605,7 @@
     </script>
 </body>
 </html>
+
 
 
 
