--- a/index.html
+++ b/index.html
@@ -1421,7 +1421,7 @@
         // Download CV Function
         function downloadCV() {
             const link = document.createElement('a');
-            link.href = 'data:application/pdf;base64,'; // Add your PDF base64 here
+            link.href = 'PLANTILLA CV Portafolio Profesional.pdf';
             link.download = 'Jose_Mario_Arias_CV.pdf';
             
             // Create a simple CV content for demo
@@ -1605,6 +1605,7 @@
     </script>
 </body>
 </html>
+
 
 
 
