--- a/index.html
+++ b/index.html
@@ -1551,7 +1551,7 @@
                 <div class="hero-container">
                     <div class="hero-content" data-aos="fade-right">
                         <h1 class="typewriter" data-en="Freelance Developer" data-es="Desarrollador Freelance">Desarrollador Freelance</h1>
-                        <p class="subtitle" data-en="Full Stack Developer & UI/UX Designer" data-es="Desarrollador Full Stack & Diseñador UI/UX">Desarrollador Full Stack & Diseñador UI/UX</p>
+                        <p class="subtitle" data-en="Full Stack Developer" data-es="Desarrollador Full Stack">Desarrollador Full Stack & Diseñador UI/UX</p>
                         <p data-en="Creating innovative digital solutions with modern technologies. Specialized in web development, mobile apps, and user experience design." data-es="Creando soluciones digitales innovadoras con tecnologías modernas. Especializado en desarrollo web, aplicaciones móviles y diseño de experiencia de usuario.">
                             Creando soluciones digitales innovadoras con tecnologías modernas. Especializado en desarrollo web, aplicaciones móviles y diseño de experiencia de usuario.
                         </p>
@@ -1585,7 +1585,7 @@
                 <div class="container">
                     <div class="section-title" data-aos="fade-up">
                         <h2 data-en="About Me" data-es="Acerca de Mí">Acerca de Mí</h2>
-                        <p data-en="I am a Software Developer with a strong commitment to creating innovative and efficient technological solutions. I specialize in Full Stack Development" data-es="Soy desarrollador de Software con un fuerte compromiso por el desarrollo de soluciones tecnológicas innovadoras y eficientes. Me especializo en desarrollo Full Stack">
+                        <p data-en="I am a Software Developer with a strong commitment to creating innovative and efficient technological solutions. I specialize in Full Stack Development." data-es="Soy desarrollador de Software con un fuerte compromiso por el desarrollo de soluciones tecnológicas innovadoras y eficientes. Me especializo en desarrollo Full Stack.">
                             Soy desarrollador de Software con un fuerte compromiso por el desarrollo de soluciones tecnológicas innovadoras y eficientes. Me especializo en desarrollo Full Stack
                         </p>
                     </div>
@@ -1640,9 +1640,9 @@
             <section class="services" id="services">
                 <div class="container">
                     <div class="section-title" data-aos="fade-up">
-                        <h2 data-en="My Services" data-es="Mis Servicios">Mis Servicios</h2>
-                        <p data-en="Professional services tailored to your needs" data-es="Servicios profesionales adaptados a tus necesidades">
-                            Servicios profesionales adaptados a tus necesidades
+                        <h2 data-en="Services" data-es="Servicios">Servicios</h2>
+                        <p data-en="Professional services tailored to your needs." data-es="Servicios profesionales adaptados a tus necesidades">
+                            Servicios profesionales adaptados a tus necesidades.
                         </p>
                     </div>
                     <div class="services-grid">
@@ -1696,7 +1696,7 @@
             <section class="portfolio" id="portfolio">
                 <div class="container">
                     <div class="section-title" data-aos="fade-up">
-                        <h2 data-en="My Portfolio" data-es="Mi Portafolio">Mi Portafolio</h2>
+                        <h2 data-en="Galery" data-es="Galeria">Galeria</h2>
                         <p data-en="Featured projects that showcase my skills and creativity" data-es="Proyectos destacados que muestran mis habilidades y creatividad">
                             Proyectos destacados que muestran mis habilidades y creatividad
                         </p>
@@ -1725,7 +1725,7 @@
                             <div class="portfolio-content">
                                 <h3 data-en="Analytics Dashboard" data-es="Dashboard de Análisis">Dashboard de Análisis</h3>
                                 <p data-en="Real-time data visualization dashboard with interactive charts" data-es="Dashboard de visualización de datos en tiempo real con gráficos interactivos">
-                                    Dashboard de visualización de datos en tiempo real con gráficos interactivos
+                                    Dashboard de visualización de datos en tiempo real con gráficos interactivos.
                                 </p>
                                 <div class="tech-tags">
                                     <span class="tech-tag">Vue.js</span>
@@ -2063,7 +2063,7 @@
                                 <i class="fas fa-clock" aria-hidden="true"></i>
                                 <div>
                                     <h4 data-en="Availability" data-es="Disponibilidad">Disponibilidad</h4>
-                                    <p data-en="Monday - Friday: 8:00 AM - 6:00 PM (CST)" data-es="Lunes - Viernes: 8:00 AM - 6:00 PM (CST)">Lunes - Viernes: 8:00 AM - 6:00 PM (CST)</p>
+                                    <p data-en="Monday - Friday: 8:00 AM - 6:00 PM (CT)" data-es="Lunes - Viernes: 8:00 AM - 6:00 PM (CT)">Lunes - Viernes: 8:00 AM - 6:00 PM (CT)</p>
                                 </div>
                             </div>
                         </div>
@@ -2843,4 +2843,5 @@
     </script>
 </body>
 </html>
+
 
