--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- SEO Optimization -->
-    <title>José Mario Arias - Desarrollador Full Stack | Freelance Web & Mobile</title>
+    <title>LetsCode</title>
     <meta name="description" content="Desarrollador Full Stack freelance especializado en React, Node.js, y desarrollo móvil. Creo soluciones digitales innovadoras para empresas en Costa Rica y Latinoamérica.">
     <meta name="keywords" content="desarrollador web, programador freelance, React, Node.js, desarrollo móvil, Costa Rica, Full Stack, JavaScript, UI/UX">
     <meta name="author" content="José Mario Arias">
@@ -2843,5 +2843,6 @@
     </script>
 </body>
 </html>
+
 
 
