--- a/index.html
+++ b/index.html
@@ -2177,7 +2177,7 @@
                     </a>
                 </div>
                 
-                <p>&copy; 2024 José Mario Arias. <span data-en="All rights reserved." data-es="Todos los derechos reservados.">Todos los derechos reservados.</span></p>
+                <p>&copy; 2025 LetsCode. <span data-en="All rights reserved." data-es="Todos los derechos reservados.">Todos los derechos reservados.</span></p>
             </div>
         </footer>
     </div>
@@ -2843,6 +2843,7 @@
     </script>
 </body>
 </html>
+
 
 
 
