--- a/index.html
+++ b/index.html
@@ -1569,7 +1569,7 @@
                     <div class="hero-image" data-aos="fade-left">
                         <div class="profile-card animate-float">
                             <div class="profile-image">
-                                <img src="imagensoftware.png" alt="Foto de José Mario Arias" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover;">
+                                <img src="josemario.png" alt="Foto de José Mario Arias" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover;">
                             </div>
                             <h3 data-en="José Mario Arias" data-es="José Mario Arias">José Mario Arias</h3>
                             <p data-en="Passionate about creating digital solutions that make a difference in people's lives." data-es="Apasionado por crear soluciones digitales que marquen la diferencia en la vida de las personas.">
@@ -2843,6 +2843,7 @@
     </script>
 </body>
 </html>
+
 
 
 
