--- a/index.html
+++ b/index.html
@@ -1700,7 +1700,7 @@
             <section class="services" id="services">
                 <div class="container">
                     <div class="section-title" data-aos="fade-up">
-                        <h2 data-en="Services & Pricing" data-es="Servicios">Servicios y Precios</h2>
+                        <h2 data-en="Services" data-es="Servicios">Servicios y Precios</h2>
                         <p data-en="Professional development services with transparent pricing for your digital projects." data-es="Servicios de desarrollo profesional con precios transparentes para tus proyectos digitales.">
                             Servicios de desarrollo profesional con precios transparentes para tus proyectos digitales.
                         </p>
@@ -2707,4 +2707,5 @@
     </script>
 </body>
 </html>
+
 
